# iac-pr-reviewer

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/: iac-compliance.json
.github/workflows/: ci.yml  compliance.yml
docs/: architecture.md  implementation-plan.md  integration-roadmap.md  validation-workflow.md
examples/azure/app_service/compliant/: expected-findings.json  main.tf
examples/azure/app_service/non_compliant/: expected-findings.json  main.tf
examples/azure/key_vault/compliant/: expected-findings.json  main.tf
examples/azure/key_vault/non_compliant/: expected-findings.json  main.tf
examples/azure/multi_service/compliant/: expected-findings.json  main.tf
examples/azure/multi_service/non_compliant/: expected-findings.json  main.tf
examples/azure/sql_server/compliant/: expected-findings.json  main.tf
examples/azure/sql_server/non_compliant/: expected-findings.json  main.tf
examples/azure/storage_account/compliant/: expected-findings.json  main.tf
examples/azure/storage_account/non_compliant/: expected-findings.json  main.tf
src/: __init__.py
src/compliance_service/: __init__.py  service.py
src/compliance_service/adapters/: __init__.py  plan_loader.py  rule_engine.py
src/compliance_service/cli/: __init__.py  app.py  github_reporting.py
src/compliance_service/models/: __init__.py  finding.py  resource.py
src/compliance_service/normalization/: __init__.py  resource_normalizer.py
src/compliance_service/rules/: __init__.py  install_psrule.ps1  rule_pack_manager.py  run_psrule.ps1
src/compliance_service/rules/manifests/: psrule.azure-baseline.yaml
tests/: __init__.py  conftest.py  test_service.py  test_smoke.py
tests/adapters/: test_plan_loader.py  test_psrule_adapter.py
tests/cli/: test_github_reporting.py
tests/fixtures/: plan-minimal.json
tests/fixtures/azure/: app_service.json  app_service_storage_plan.json  key_vault.json  sql_server.json
tests/integration/: test_cli_validate.py
tests/normalization/: test_resource_normalizer.py
tests/rules/: test_rule_pack_manager.py
