[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iac-compliance-service"
version = "0.1.0"
description = "Infrastructure-as-code compliance tooling with Terraform integration."
readme = "README.md"
authors = [{ name = "Compliance Team" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "pydantic>=2.5",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.scripts]
iac-compliance = "compliance_service.cli.app:run"

[project.optional-dependencies]
dev = [
    "black>=23.12",
    "ruff>=0.1.9",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"compliance_service.rules" = [
    "manifests/*.yaml",
    "run_psrule.ps1",
    "install_psrule.ps1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
]
ignore = [
    "E203",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
